--- a/ColmarAcademyCapstone/index.html
+++ b/ColmarAcademyCapstone/index.html
@@ -21,14 +21,77 @@
         <span><a href="#">Sign in</a></span>
       </nav>
     </header>
+    <!--*MAIN CONTENT*-->
+    <div class="main">
+      <!--*learn*-->
+      <div class="learn">
+        <div class="img60">
+          <img src=".\resources\images\banner.jpg">
+        </div>
+        <div class="text">
+          <h1>Learn something new everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <div class="button">
+            <h3>Start here</h3>
+          </div>
+        </div>
+      </div>
+
+      <!--*practice*-->
+      <div class="practice">
+        <div class="left">
+          <div class="img60">
+            <img src=".\resources\images\information-main.jpg">
+          </div>
+          <div class="text">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>"Curabitur vitae liero in ipsum porttitor consequat. Aliquam et
+              commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
+              sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+              tristisque ligula."</p>
+            <p class="author">Emanuel, Sr Strategist at Hiring.com</p>
+          </div>
+        </div>
+        <div class="right">
+          <div class="orientation">
+            <div class="img35">
+              <img src=".\resources\images\information-orientation.jpg">
+            </div>
+            <div class="text">
+              <h3>Orientation date</h3>
+              <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+          <div class="campus">
+            <div class="img35">
+              <img src=".\resources\images\information-campus.jpg">
+            </div>
+            <div class="text">
+              <h3>Our campus</h3>
+              <p>Find which campus is close by you</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+          <div class="lecture">
+            <div class="img35">
+              <img src=".\resources\images\information-guest-lecture.jpg">
+            </div>
+            <div class="text">
+              <h3>Our guest lecture</h3>
+              <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
-
-    <!--*LEARN* -->
-    <!-- *PRACTICE *-->
-    <!--*START*  -->
-    <!--*THESIS*  -->
+    <!-- *practice*-->
+    <!--*start*-->
+    <!--*thesis*-->
+    </div>
     <!--*FOOTER*-->
     <footer>
       <div class="copyright">
