--- a/ColmarAcademyCapstone/index.html
+++ b/ColmarAcademyCapstone/index.html
@@ -10,7 +10,7 @@
   <!--* HEADER*-->
     <header>
       <div class="logo">
-        <img class="logoimg"src=".\resources\images\ic-logo.svg">
+        <img class="logoimg"src=".\resources\images\ic-logo.svg" alt="image loading">
         <span class="colmar">COLMAR</span>
         <span class="academy">ACADEMY</span>
       </div>
@@ -31,33 +31,36 @@
         <div class="text">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-          <div class="button">
+        </div>
+        <div class="button">
             <h3>Start here</h3>
-          </div>
         </div>
       </div>
 
       <!--*practice*-->
       <div class="practice">
+        <!--*left*-->
         <div class="left">
           <div class="img60">
-            <img src=".\resources\images\information-main.jpg">
+            <img src=".\resources\images\information-main.jpg" alt="image loading">
           </div>
           <div class="text">
             <h1>It doesn't hurt to keep practicing</h1>
-            <p>"Curabitur vitae liero in ipsum porttitor consequat. Aliquam et
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
               commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
               sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
               tristisque ligula."</p>
             <p class="author">Emanuel, Sr Strategist at Hiring.com</p>
           </div>
         </div>
+        <!--*right*  -->
         <div class="right">
           <div class="orientation">
             <div class="img35">
-              <img src=".\resources\images\information-orientation.jpg">
+              <img src=".\resources\images\information-orientation.jpg"
+              alt="image loading">
             </div>
-            <div class="text">
+            <div class="text60">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
               <a href="#">Read more</a>
@@ -65,9 +68,9 @@
           </div>
           <div class="campus">
             <div class="img35">
-              <img src=".\resources\images\information-campus.jpg">
+              <img src=".\resources\images\information-campus.jpg" alt="image loading">
             </div>
-            <div class="text">
+            <div class="text60">
               <h3>Our campus</h3>
               <p>Find which campus is close by you</p>
               <a href="#">Read more</a>
@@ -75,9 +78,10 @@
           </div>
           <div class="lecture">
             <div class="img35">
-              <img src=".\resources\images\information-guest-lecture.jpg">
+              <img src=".\resources\images\information-guest-lecture.jpg"
+              alt="image loading">
             </div>
-            <div class="text">
+            <div class="text60">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
               <a href="#">Read more</a>
@@ -86,12 +90,93 @@
         </div>
       </div>
 
+      <!--*start*-->
+      <div class="start">
+        <div class="text">
+          <h1>Start learning</h1>
+        </div>
+        <div class="options">
+          <div class="courses">
+            <img src=".\resources\images\course-software.jpg" alt="image loading">
+            <h3>Software engineering</h3>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs"</p>
+          </div>
+          <div class="courses">
+            <img src=".\resources\images\course-computer-art.jpg" alt="image loading">
+            <h3>Computer art</h3>
+            <p>COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+              Computer Animation</p>
+          </div>
+          <div class="courses">
+            <img src=".\resources\images\course-design.jpg" alt="image loading">
+            <h3>Design</h3>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+          <div class="courses">
+            <img src="ColmarAcademyCapstone\resources\images\course-data.jpg"
+            alt="image loading">
+            <h3>Data</h3>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+          <div class="courses">
+            <img src=".\resources\images\course-business.jpg" alt="image loading">
+            <h3>Business</h3>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+          <div class="courses">
+            <img src=".\resources\images\course-marketing.jpg" alt="image loading">
+            <h3>Marketing</h3>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </div>
 
-
-    <!-- *practice*-->
-    <!--*start*-->
     <!--*thesis*-->
+    <div class="thesis">
+      <!--*left*-->
+      <h1>Thesis exhibit</h1>
+      <div class="left">
+        <div class="img60">
+          <video src=".\resources\videos\thesis.mp4" alt="video loading"
+          controls autoplay></video>
+        </div>
+        <div class="text">
+          <h3>Reimagine urban</h3>
+          <p>Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+            commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus
+            sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+            tristisque ligula.</p>
+        </div>
+      </div>
+      <!--*right*  -->
+      <div class="right">
+        <div class="thesistext">
+          <div class="img35">
+            <img src=".\resources\images\thesis-fisma.jpg"
+            alt="image loading">
+          </div>
+          <div class="text65">
+            <h3>Fisma: Design and Prototype</h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+          <div class="img35">
+            <img src=".\resources\images\thesis-now-and-then.jpg"
+            alt="image loading">
+          </div>
+          <div class="text65">
+            <h3>Now and then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
     <!--*FOOTER*-->
     <footer>
       <div class="copyright">
