--- a/ColmarAcademyCapstone/index.html
+++ b/ColmarAcademyCapstone/index.html
@@ -3,8 +3,9 @@
   <head>
 
     <title>Colmar Academy</title>
-      <link rel="stylesheet" type="text/css" href="reset.css">
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href=".\resources\css\reset.css">
+      <link rel="stylesheet" type="text/css" href=".\resources\css\style.css">
+      <link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,700" rel="stylesheet">
   </head>
   <body>
   <!--* HEADER*-->
@@ -29,11 +30,15 @@
           <img src=".\resources\images\banner.jpg">
         </div>
         <div class="text">
-          <h1>Learn something new everyday</h1>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        </div>
-        <div class="button">
+          <div class="head1">
+             <h1>Learn something new everyday</h1>
+          </div>
+          <div class="head3">
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          </div>
+          <div class="button">
             <h3>Start here</h3>
+          </div>
         </div>
       </div>
 
